@@ -1,12 +1,12 @@
 \input texinfo.tex    @c -*-texinfo-*-
 @c %**start of header
 @setfilename gentoo-syntax.info
-@settitle Major mode for ebuilds, eclasses and eselect modules in Gentoo
+@settitle Major mode for ebuilds and eclasses in Gentoo
 @c %**end of header
 
 @copying
-This manual is for gentoo-syntax, which is a major mode for ebuild,
-eclass and eselect module files.
+This manual is for gentoo-syntax, which is a major mode for ebuild
+and eclass files.
 
 Copyright @copyright{} 2009-2013 Gentoo Foundation
 
@@ -20,13 +20,13 @@ later version published by the Free Software Foundation.
 @dircategory Gentoo
 @dircategory Emacs
 @direntry
-* gentoo-syntax: (gentoo-syntax).       Major mode for ebuilds, eclasses and eselect modules.
+* gentoo-syntax: (gentoo-syntax).       Major mode for ebuild and eclass files.
 @end direntry
 
 
 @titlepage
 @title gentoo-syntax 1.21
-@subtitle Major mode for Gentoo files
+@subtitle Major mode for ebuilds and eclasses in Gentoo
 @author Christian Faulhammer
 @page
 @insertcopying
@@ -38,7 +38,7 @@ later version published by the Free Software Foundation.
 
 @top gentoo-syntax: An introduction
 This collection of modes will help the user to efficiently write and
-edit ebuilds, eclasses and eselect modules which are special to Gentoo,
+edit ebuilds and eclasses which are special to Gentoo,
 a meta-distribution with various targets (Linux distribution, prefixed
 environments in other operating systems, and integration of other
 kernels and userlands like the BSDs).
@@ -50,21 +50,15 @@ scripts and there easy to create.  Eclasses are comparable to a library
 which provides generic functions that a set of ebuilds can use by
 sourcing it on request.
 
-Eselect is a framework to set one out of many alternatives as the
-default value or to activate many out of many choices.  An example is to
-choose the version of GNU Emacs called by the @code{/usr/bin/emacs}
-program.  Those modules are also near to Bash.
-
-gentoo-syntax provides two modes to edit the above three file types:
-ebuild (eclass) mode and eselect mode.  Other features are the execution
-of often needed commands (like KEYWORDS manipulation) or fast-track
-creation of new ebuilds by skeleton support.
+gentoo-syntax provides ebuild (eclass) mode to edit the above two
+file types.  Other features are the execution of often needed commands
+(like KEYWORDS manipulation) or fast-track creation of new ebuilds
+by skeleton support.
 
 @menu
 * Commands:: What gentoo-syntax provides.
 * ebuild-mode:: Editing ebuilds.
 * eclass-mode:: Editing eclasses.
-* eselect-mode:: Editing eselect modules.
 * gentoo-newsitem-mode:: Editing GLEP 42 news items.
 @end menu
 
@@ -75,10 +69,9 @@ Two packages are available for installation:
 (there is support for GNU Emacs and XEmacs from the same source).  When
 installed through the normal package management in Gentoo and proper
 configuration of Emacs, gentoo-syntax loads the appropriate mode on
-opening files with the extensions @code{.ebuild}, @code{.eclass} and
-@code{.eselect}.  As the ebuild format is based on the Bash syntax,
-sh-mode is called as a base, where ebuild specific things are
-added/changed on top.
+opening files with the extensions @code{.ebuild} and @code{.eclass}.
+As the ebuild format is based on the Bash syntax, sh-mode is called as
+a base, where ebuild specific things are added/changed on top.
 
 If font-locking is enabled, keywords are highlighted, both the standard
 set available from vanilla Portage and special functions from all common
@@ -183,16 +176,12 @@ Run Portage's ebuild command, you are prompted for the phase you want.
 Create a ChangeLog entry.
 @end table
 
-@node eclass-mode, eselect-mode, ebuild-mode, Top
+@node eclass-mode, gentoo-newsitem-mode, ebuild-mode, Top
 @chapter eclass-mode
 There is no special eclass-mode but ebuild-mode is used without the
 commands that make no sense in eclasses.
 
-@node eselect-mode, gentoo-newsitem-mode ,eclass-mode, Top
-@chapter eselect-mode
-This mode only supports highlighting of special eselect keywords.
-
-@node gentoo-newsitem-mode, ,eselect-mode, Top
+@node gentoo-newsitem-mode, , eclass-mode, Top
 @chapter gentoo-newsitem-mode for GLEP 42 news items
 This mode supports the highlighting of relevant keywords for GLEP 42
 news items.  These news items get displayed if special criteria for
