@@ -1,3 +1,13 @@
+2013-07-04  Ulrich Müller  <ulm@gentoo.org>
+
+	* gentoo-syntax.el: Remove eselect-mode; it will be maintained
+	in the eselect repository.
+	(eselect-mode-font-lock-keywords, eselect-mode): Variable and
+	function removed.
+	* eselect-mode-keywords.el: File removed.
+	* gentoo-syntax.texi: Don't mention eselect-mode.
+	* Makefile (DISTFILES): Update.
+
 2013-03-08  Ulrich Müller  <ulm@gentoo.org>
 
 	* Version 1.21 released.
